# Multiplayer-First_Person_Shooter

./: README.md
client/: Cargo.toml
client/assets/: eye.gltf  eye2.gltf
client/src/: arms.rs  components.rs  labyrinte.rs  levels.rs  main.rs  message.rs  players.rs
server/: Cargo.toml  request.json
server/src/: components.rs  lib.rs  main.rs  player.rs
