[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.1", features = ["full"] }
# bevy = "0.14.0"
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0.120"
bevy = { version = "0.12", features = ["jpeg"] }
rand = "0.8"
rand_chacha = "0.3.1"
bevy_rapier3d = "0.23.0"
lazy_static = "1.4"
fastrand = "1.9.0"
