[package]
name = "server"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
bevy = "0.12"
rand = "0.8"
rand_chacha = "0.3.1"
bevy_rapier3d = "0.23.0"
local-ip-address = "0.3"
local-ip = "0.1"
